@@ -1,3 +1,8 @@
+2012-03-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/52750
+	* gcc.c-torture/compile/pr52750.c: New test.
+
 2012-03-28  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from 2012-03-28 mainline r185910.
