@@ -1,3 +1,9 @@
+2012-03-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/52750
+	* tree-vect-generic.c (vector_element): Perform multiplication
+	for pos in bitsizetype type instead of idx type.
+
 2012-03-28  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from 2012-03-28 mainline r185910.
